[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrance"
version = "0.1.0"
authors = [
  { name="Leon Strenger", email="leon.strenger@mdc-berlin.de" },
]
description = "pyTrance: framework for subcellular spatial transcriptomics analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-2.0"
license-files = ["LICENSE"]

[project.optional-dependencies]
all = []
